--- a/tex/foreword.tex
+++ b/tex/foreword.tex
@@ -1,7 +1,7 @@
 %
-% intro
+% foreword
 % @author Tobias Weber <tweber@ill.fr>
-% @date mar-2021
+% @date sep-2021
 % @license see 'LICENSE' file
 %
 
