--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -82,11 +82,24 @@
 @book
 {
 	Scarpino2011,
-	author = {Scarpino, M.},
-	title = {{OpenCL in Action}},
+	author = {Matthew Scarpino},
+	title = {{OpenCL in Action -- How to accelerate graphics and computations}},
 	year = {2011},
-	publisher = {},
+	publisher = {Manning Publications Co., Shelter Island, NY, USA},
 	isbn = {978-1-617-29017-6},
+	url = {https://www.manning.com/books/opencl-in-action},
+}
+
+
+@book
+{
+	Williams2012,
+	author = {Anthony Williams},
+	title = {{C++ Concurrency in Action -- Practical Multithreading}},
+	year = {2012},
+	publisher = {Manning Publications Co.},
+	isbn = {978-1-933-98877-1},
+	url = {https://www.manning.com/books/c-plus-plus-concurrency-in-action},
 }
 
 
