--- a/tex/notation.tex
+++ b/tex/notation.tex
@@ -67,6 +67,8 @@ Table \ref{tab:abbreviations} lists abbreviations that are used in this work.
 		\hline
 		CLI              & \underline{C}ommand \underline{L}ine \underline{I}nterface. \tabularnewline
 		\hline
+		CNC              & \underline{C}omputer \underline{N}umerical \underline{C}ontrol \cite{wiki_milling}. \tabularnewline
+		\hline
 		GPU              & \underline{G}raphics \underline{P}rocessing \underline{U}nit. \tabularnewline
 		\hline
 		GUI              & \underline{G}raphical \underline{U}ser \underline{I}nterface. \tabularnewline
