--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -5,7 +5,7 @@
 % @license see 'LICENSE' file
 %
 
-\documentclass[english, 11pt]{book}
+\documentclass[english, 11pt, a4paper]{book}
 
 \RequirePackage{fixltx2e}
 \RequirePackage{fix-cm}
@@ -26,7 +26,8 @@
 \usepackage[colorlinks=true, linkcolor=black, citecolor=blue, urlcolor=blue, unicode=true]{hyperref}
 
 \usepackage[a4paper]{geometry}
-\geometry{tmargin=2.5cm, bmargin=2.5cm, lmargin=2cm, rmargin=2cm}
+%\geometry{tmargin=2.5cm, bmargin=2.5cm, lmargin=2cm, rmargin=2cm}
+\geometry{tmargin=2.5cm, bmargin=2.5cm, lmargin=2.25cm, rmargin=1.75cm}
 
 \usepackage{float}
 %\floatstyle{plain}
