--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -315,6 +315,40 @@
 	publisher = {Springer-Verlag, Berlin, Heidelberg}
 }
 
+
+@incollection
+{
+	Boissonnat2006,
+	author = {Jean-Daniel Boissonnat and Camille Wormser and Mariette Yvinec},
+	title = {{Curved Voronoi Diagrams}},
+	editor = {Jean-Daniel Boissonnat and Monique Teillaud},
+	booktitle = {{Effective Computational Geometry for Curves and Surfaces}},
+	year = {2006},
+	pages = {67-116},
+	doi = {10.1007/978-3-540-33259-6_2},
+	PRINTisbn = {978-3-540-33258-9},
+	isbn = {978-3-540-33259-6},
+	publisher = {Springer-Verlag, Berlin, Heidelberg},
+	issn = {1612-3786},
+}
+
+
+@incollection
+{
+	Cazals2006,
+	author = {Fr\'ed\'eric Cazals and Joachim Giesen},
+	title = {{Delaunay Triangulation Based Surface Reconstruction}},
+	editor = {Jean-Daniel Boissonnat and Monique Teillaud},
+	booktitle = {{Effective Computational Geometry for Curves and Surfaces}},
+	year = {2006},
+	pages = {231-276},
+	doi = {10.1007/978-3-540-33259-6_6},
+	PRINTisbn = {978-3-540-33258-9},
+	isbn = {978-3-540-33259-6},
+	publisher = {Springer-Verlag, Berlin, Heidelberg},
+	issn = {1612-3786},
+}
+
 % -----------------------------------------------------------------------------
 
 
@@ -759,6 +793,17 @@
 
 @misc
 {
+	wiki_medial,
+	author = {{Wikipedia contributors}},
+	title = {{Mediale Achse --- Wikipedia{,} Die freie Enzyklop\"adie}},
+	year = "2020",
+	url = "https://de.wikipedia.org/w/index.php?title=Mediale_Achse&oldid=202172816",
+	note = "[Online; accessed 17-September-2021]"
+}
+
+
+@misc
+{
 	wiki_proj,
 	author = {{Wikipedia contributors}},
 	title = {{Lot (Mathematik) --- Wikipedia{,} Die freie Enzyklop\"adie}},
@@ -1051,6 +1096,30 @@
 	url = "https://opencv.org/",
 	github = "https://github.com/opencv/opencv",
 	note = "[Online; accessed 11-September-2021]",
+}
+
+
+@misc
+{
+	web_cgal,
+	title = {{CGAL -- Computational Geometry Algorithms Library (Software)}},
+	author = {{Various Authors}},
+	year = {1995-2021},
+	url = "https://www.cgal.org",
+	github = "https://github.com/CGAL/cgal",
+	note = "[Online; accessed 17-September-2021]",
+}
+
+
+@misc
+{
+	web_2dsegdel,
+	title = {{2D Segment Delaunay Graphs, part of CGAL \cite{web_cgal} (Software)}},
+	author = {Menelaos Karavelas},
+	year = {2003-2021},
+	url = "https://doc.cgal.org/latest/Segment_Delaunay_graph_2/index.html",
+	github = "https://github.com/CGAL/cgal/tree/master/Segment_Delaunay_graph_2",
+	note = "[Online; accessed 17-September-2021]",
 }
 
 
