--- a/tex/algos.tex
+++ b/tex/algos.tex
@@ -15,6 +15,7 @@ as well as spatial index trees (section \ref{sec:indextrees}).
 In this chapter, these basic building blocks are reviewed in a general manner.
 
 
+
 \section{Voronoi diagrams}
 \label{sec:voro}
 As we will see in the next chapter, a concept that will play a central role for the path-finding 
@@ -24,7 +25,7 @@ and in \cite[Ch. 5, pp. 209f]{FUH_geo2020}, which we follow in this chapter.
 
 Starting with some basic definitions, a \textit{Voronoi diagram} is a set of 
 \textit{bisectors}, $B\left(\underline{x},\, \underline{y}\right)$, separating \textit{Voronoi regions}.
-A Voronoi region names the set of points $\underline{x}$ in a vectorspace $V$ that are closest to 
+A Voronoi region names the set of points $\underline{x}$ in a vector space $V$ that are closest to 
 a given site $\underline{s}$ under a given metric $\left\Vert \cdot \right\Vert$, which measures distances in $V$.
 The site can either be isolated vertices, lines or any other finite object.
 Formally, the bisector between two sites $\underline{s}_1$ and $\underline{s}_2$ is, 
@@ -33,22 +34,25 @@ generalising from \cite[p. 140]{Icking2001},
 	B\left(\underline{s}_1,\, \underline{s}_2\right)\ =\ \left\{ \underline{x} \in V \ |\ 
 		\left\Vert \underline{x} - \underline{s}_1 \right\Vert = \left\Vert \underline{x} - \underline{s}_2 \right\Vert \right\}.
 \end{equation}
-Even though this definition of Voronoi diagrams does not restrict the vectorspace to the $\mathbb{R}^n$ 
+Even though this definition of Voronoi diagrams does not restrict the vector space to the $\mathbb{R}^n$ 
 and the underlying metric to the usual Euclidian one, 
 \begin{equation}
 	\left\Vert \underline{x} \right\Vert_2 \ =\ \sqrt{\left<x | x \right>},
 \end{equation}
 they are nevertheless implied in the rest of this work if nothing else is specified.
 Specifically, we thus set $V = \mathbb{R}^2$ and $\left\Vert \cdot \right\Vert = \left\Vert \cdot \right\Vert_2$. 
-Please refer to \cite{Icking2001} for other metrics.
+Please refer to Ref. \cite{Icking2001} for other metrics and to Ref. \cite{Boissonnat2006} for further 
+generalisations of the concept of Voronoi diagrams.
 
 
 
 \subsection{Voronoi diagrams for vertex sites}
-The simplest case is the Voronoi diagram for vertex sites.
-For the general case, namely $\mathbb{R}^n$, the bisectors consist of $n-1$-dimensional hyperplanes. 
-Specifically for $\mathbb{R}^n$, they are either line segments or infinite lines, depending if the 
-corresponding Voronoi region is closed or open, respectively.
+The simplest case to consider is the Voronoi diagram where the sites are vertices, 
+the vector space is the $\mathbb{R}^n$ and the metric Euclidian. This case is called the 
+\textit{affine Voronoi diagram} in the work by Boissonnat \textit{et al.},
+its bisectors consist of $n-1$-dimensional hyperplanes \cite[pp. 72-81]{Boissonnat2006}.
+Specifically for $\mathbb{R}^2$, the bisectors are either line segments or infinite lines, 
+depending on the open or closed nature of the corresponding Voronoi region.
 An example of two or several vertex sites and their bisectors is shown in Fig. \ref{fig:vertex_voro}.
 
 \begin{figure}[htb]
@@ -117,9 +121,11 @@ are shown in Fig. \ref{fig:cubic_bzs}.
 
 
 
-\subsection{Voronoi diagrams for line-segment sites}
+\subsection{Voronoi diagrams for line segment sites}
 \label{sec:voro_ls}
-We now look at the special case of Voronoi diagrams constructed from line segments.
+Voronoi diagrams over the vector space $\mathbb{R}^n$ with either a non-Euclidian metric or sites that
+are not point-shaped are called non-affine and possess curved bisectors \cite[p. 72]{Boissonnat2006}.
+We now look at the special case of Voronoi diagrams over the $\mathbb{R}^2$ constructed from line segments.
 A description of this case can be found in \cite[Ch. 7.3, pp. 160-163]{Berg2008} and in 
 \cite[pp. 242-247]{FUH_geo2020}, whose descriptions we follow in this section.
 
@@ -165,6 +171,14 @@ An example of two or several line segment sites and their bisectors is shown in 
 \end{figure}
 
 
+
+\subsection{Voronoi diagrams for curves}
+\label{sec:voro_median}
+TODO: \cite{wiki_medial}, \cite{Boissonnat2006}, \cite{Cazals2006}.
+
+
+
+
 \subsection{Software libraries}
 A stable and efficient C/C++ library for calculating Voronoi diagram in $\mathbb{R}^n$ is the popular and very 
 high-quality \textit{QHull} library by C. B. Barber \cite{web_qhull}. While it does only calculate 
@@ -178,7 +192,10 @@ are \textit{VRONI} by M. Held \cite{Held2001}, \textit{OpenVoronoi} by A. E. Wal
 by W. Schumann \cite{DiplomaSchumann}, as well as the Voronoi calculator \cite{web_boost_polygon_voronoi} 
 by A. Sydorchukof, which is part of the \textit{Boost.Polygon}  \cite{web_boost_polygon, Simonson2009} 
 C++ library.
-The first three are not feasible for the present project, though: 
+A further noteworthy library, which is capable of caluclating 2D Voronoi diagrams and Delaunay triangulations
+for both vertex and line segment sites is the \textit{2D Segment Delaunay Graphs} library by M. Karavelas \cite{web_2dsegdel} 
+which is part of the \textit{CGAL} \cite{web_cgal} software package.
+The first three libraries are not feasible for the present project, though: 
 \begin{itemize}
 	\item \textit{VRONI} \cite{Held2001} is reported in a paper, but is neither freely available 
 		nor under a suitable open-source license.
@@ -193,11 +210,23 @@ The first three are not feasible for the present project, though:
 	\item All requirements were met by \textit{Boost.Polygon} \cite{web_boost_polygon}, though, and we will use 
 		this library for the calculations of the present work.
 		\textit{Boost.Polygon}  uses Fortune's sweep algorithm \cite{Fortune1987} to construct 
-		the Voronoi diagram and is internally based on integers coordinates \cite{web_boost_polygon}.
+		the Voronoi diagram, which has an upper bound in complexity of $\mathcal{O}\left( n \log_2 n \right)$ in time
+		and $\mathcal{O}\left( n \right)$ in storage space for $n$ line segments \cite[p. 168]{Fortune1987}.
+		The library is internally based on integers coordinates for optimal performance \cite{web_boost_polygon}.
 		The reliance on integer coordinate representation is also responsible for \textit{Boost.Polygon}'s 
 		inability to handle intersecting lines, because the intersection point may be at a non-integer coordinate. 
 		Intersecting lines need to be carefully filtered out before calculation, because they can unfortunately cause the 
 		\textit{Boost.Polygon} library to either crash, hang, or yield wrong bisectors.
+	\item The \textit{2D Segment Delaunay Graphs} library \cite{web_2dsegdel} also fulfills all requirements with respect
+		to its open-source licensing model and its capabilities to calculate line segment Voronoi diagrams, even for 
+		intersecting line segments. We nevertheless opt for \textit{Boost.Polygon} because with its optimisation
+		for integer numbers we can generally expect a better performance, which is crucial for the large number of
+		line segment that is expected in the present application.
+		Furthermore, as is discussed by Boissonat \textit{et al.}, \textit{2D Segment Delaunay Graphs} uses an incremental 
+		algorithm \cite[pp. 114-115]{Boissonnat2006}, which has a time complexity of only
+		$\mathcal{O}\left( n \log_2^2 n \right)$ for live-inserting $n$ line segments \cite[p. 104]{Boissonnat2006}, 
+		but can also achieve $\mathcal{O}\left( n \log_2 n \right)$ when inserting the line segments in randomised 
+		order \cite[p. 105]{Boissonnat2006}.
 \end{itemize}
 
 
@@ -669,7 +698,8 @@ which is the preferred ressource for data types and algorithms in this work, do 
 Equally surprisingly, the \textit{Qt} libraries do feature a BSP tree implementation, but it is not part of 
 their public API, but only used internally in the \lstinline[language=C++]|QGraphicsScene| class \cite{web_QGraphicsScene}.
 
-An open-source k-d tree implementation can be found in the \textit{OpenCV} library \cite{web_opencv}.
+Open-source k-d tree implementations can be found in \textit{OpenCV} \cite{web_opencv} 
+and in \textit{CGAL} \cite{web_cgal}.
 
 A high-quality implementation of R and R* trees as well as the insertion, deletion, and querying algorithms 
 operating on them is readily available through the \textit{Boost.Geometry} library \cite{web_boost_geometry, web_boost_geometry_rtree}. As first tests could directly confirm the good performance of \textit{Boost.Geometry}'s,
