--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -804,6 +804,28 @@
 
 @misc
 {
+	wiki_medial2,
+	author = {{Wikipedia contributors}},
+	title = {{Medial axis --- {Wikipedia}{,} The Free Encyclopedia}},
+	year = "2021",
+	url = "https://en.wikipedia.org/w/index.php?title=Medial_axis&oldid=1041280860",
+	note = "[Online; accessed 17-September-2021]"
+}
+
+
+@misc
+{
+	wiki_skeleton,
+	author = {{Wikipedia contributors}},
+	title = {{Topological skeleton --- {Wikipedia}{,} The Free Encyclopedia}},
+	year = "2021",
+	url = "https://en.wikipedia.org/w/index.php?title=Topological_skeleton&oldid=1033612363",
+	note = "[Online; accessed 17-September-2021]"
+}
+
+
+@misc
+{
 	wiki_proj,
 	author = {{Wikipedia contributors}},
 	title = {{Lot (Mathematik) --- Wikipedia{,} Die freie Enzyklop\"adie}},
