--- a/tex/algos.tex
+++ b/tex/algos.tex
@@ -176,10 +176,29 @@ An example of two or several line segment sites and their bisectors is shown in 
 
 \subsection{Voronoi diagrams for curves}
 \label{sec:voro_median}
-A generalisation of Voronoi diagrams for curves or, more generally, curved hypersurfaces in $\mathbb{R}^n$ under 
-an Euclidian metric, are the so-called \textit{medial axes} or \textit{topological skeletons} 
-\cite{wiki_medial, wiki_medial2, wiki_skeleton}, which are comprehensively described in 
+A generalisation of Voronoi diagrams for curves, or, more generally, curved hypersurfaces are the so-called 
+\textit{medial axes} \cite{wiki_medial}, that are comprehensively described in 
 Refs. \cite[pp. 109-114]{Boissonnat2006} and \cite[pp. 244-252]{Cazals2006}, both of which we follow here.
+
+Our definition of the bisector from Eq. \ref{eq:bisector} is almost general enough to also be valid for medial axes,
+but in difference to Eq. \ref{eq:bisector} we now have to consider sites that are not restricted to discrete points or 
+objects anymore, but instead are the infinite set of points forming a curve or surface $S$.
+Bisectors in the sense of medial axes are now defined in the most general form as the set of points
+embedded in a given vector space $V$ without the sites themselves which are closest to two (or more) 
+sites under a given metric \cite[p. 244]{Cazals2006}.
+
+For the cases considered in this work, the medial axes coincide with the so-called \textit{topological skeleton curves} 
+\cite{wiki_skeleton, wiki_medial2}, which are the curves obtained from the centre positions of all possible maximal 
+spheres on the hypersurface $S$; this is explained in detail and with more mathematical rigor in the work by 
+Cazals and Giesen \cite[pp. 246f]{Cazals2006}.
+As we will be interested in these skeletons for the mesh-building step of our path-finding algorithm in the next
+chapter, it is important to note that they are notoriously difficult to calculate in a mathematically closed form.
+In this work, we will follow the alternate route laid out by Boissonat \textit{et al.}, where the skeleton is 
+not calculated directly, but approximated by quantising the surface boundary of $S$ on a grid and calculating 
+the Voronoi diagrams for these now finite sets of sites instead of the continuous surface \cite[pp. 109-110]{Boissonnat2006}.
+Specifically for $\mathbb{R}^2$, we approximate the boundaries of the site surfaces (here then: curves) 
+using line segments and calculate their line segment Voronoi diagram from section \ref{sec:voro_ls} to get 
+approximations of the skeletons to the site curves.
 
 
 
