--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -667,6 +667,37 @@
 	issn = {1558-366X},
 }
 
+
+@inproceedings
+{
+	Karavelas2004,
+	title = {{A robust and efficient implementation for the segment Voronoi diagram}},
+	author = {Karavelas, Menelaos I},
+	booktitle = {{Proceedings of the International Symposium on Voronoi Diagrams in Science and Engineering (VD2004)}},
+	volume = {2004},
+	pages = {51-62},
+	year = {2004},
+	month = {September 13-15},
+	address = {Hongo, Tokyo, Japan},
+	url = {http://users.math.uoc.gr/~mkaravel/files/papers/svd-impl.pdf},
+}
+
+
+@inproceedings
+{
+	Karavelas2006,
+	title = {{Voronoi diagrams in CGAL}},
+	author = {Karavelas, Menelaos I},
+	booktitle = {{Proceedings of the 22nd European Workshop on Computational Geometry (EWCG'06)}},
+	editor = {Ioannis Z. Emiris and Menelaos I. Karavelas and Leonidas Palios},
+	pages = {229-232},
+	year = {2006},
+	month = {March 27-29},
+	address = {Delphi, Greece},
+	url = {http://users.math.uoc.gr/~mkaravel/files/papers/vda-ewcg06.pdf},
+}
+
+
 % -----------------------------------------------------------------------------
 
 
