voronoi calculation performance comparison

--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -1178,6 +1178,30 @@
 
 @misc
 {
+	web_gcc,
+	title = {{GCC, the GNU Compiler Collection (Software)}},
+	author = {{Free Software Foundation, Inc.}},
+	year = {2021},
+	url = "https://gcc.gnu.org/",
+	github = "https://gcc.gnu.org/git/gitweb.cgi?p=gcc.git",
+	note = "[Online; accessed 20-September-2021]",
+}
+
+
+@misc
+{
+	web_clang,
+	title = {{Clang C/C++ Compiler (Software)}},
+	author = {{LLVM Developer Group / LLVM Foundation}},
+	year = {2021},
+	url = "https://clang.llvm.org/",
+	github = "https://github.com/llvm/llvm-project",
+	note = "[Online; accessed 20-September-2021]",
+}
+
+
+@misc
+{
 	web_boost,
 	title = {{Boost C++ Libraries (Software)}},
 	author = {{Various Authors}},
