--- a/tex/notation.tex
+++ b/tex/notation.tex
@@ -65,9 +65,13 @@ Table \ref{tab:abbreviations} lists abbreviations that are used in this work.
 		\hline
 		APSP		 & \underline{A}ll \underline{P}airs \underline{S}hortest \underline{P}ath \cite[pp. 309-320]{Erickson2019}. \tabularnewline
 		\hline
+		CGAL             & \underline{C}omputational \underline{G}eometry \underline{A}lgorithms \underline{L}ibrary \cite{web_cgal}. \tabularnewline
+		\hline
 		CLI              & \underline{C}ommand \underline{L}ine \underline{I}nterface. \tabularnewline
 		\hline
 		CNC              & \underline{C}omputer \underline{N}umerical \underline{C}ontrol \cite{wiki_milling}. \tabularnewline
+		\hline
+		GCC              & \underline{G}NU \underline{C}ompiler \underline{C}ollection \cite{web_gcc}. \tabularnewline
 		\hline
 		GPU              & \underline{G}raphics \underline{P}rocessing \underline{U}nit. \tabularnewline
 		\hline
@@ -77,7 +81,7 @@ Table \ref{tab:abbreviations} lists abbreviations that are used in this work.
 		\hline
 		SO(n)            & \underline{S}pecial \underline{O}rthogonal Group in \underline{n} dimensions \cite[pp. 849-851]{Arfken2013}. \tabularnewline
 		\hline
-		SSSP		 & \underline{S}ingle \underline{S}ource \underline{S}hortest \underline{Path} \cite[pp. 273-297]{Erickson2019}. \tabularnewline
+		SSSP		 & \underline{S}ingle \underline{S}ource \underline{S}hortest \underline{P}ath \cite[pp. 273-297]{Erickson2019}. \tabularnewline
 		\hline
 		TAS              & \underline{T}riple \underline{A}xis \underline{S}pectrometer \cite{Shirane2002}. \tabularnewline
 		\hline
